--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="real.css">
 </head>
 
 <body>
-    <div></div>
-    <div class="block block-system no-title odd first last block-count-3 block-region-content block-main"
-        id="block-system-main">
-        <div class="ds-1col node node-course article odd node-full view-mode-full clearfix" role="article">
-            <div class="field field-name-field-course-no">
-                <div class="label-inline">
-                    Number:
+    <h1>Ph.D. Dissertation Research and Preparation</h2>
+        <div class="block block-system no-title odd first last block-count-3 block-region-content block-main"
+            id="block-system-main">
+            <div class="ds-1col node node-course article odd node-full view-mode-full clearfix" role="article">
+                <div class="field field-name-field-course-no">
+                    <div class="label-inline">
+                        Number:
+                    </div>
+                    CMPSC 599
                 </div>
-                CMPSC 599
-            </div>
-            <div class="field field-name-field-course-level">
-                <div class="label-inline">
-                    Level:
+                <div class="field field-name-field-course-level">
+                    <div class="label-inline">
+                        Level:
+                    </div>
+                    Graduate
                 </div>
-                Graduate
-            </div>
-            <div class="field field-name-field-units">
-                <div class="label-inline">
-                    Units:
+                <div class="field field-name-field-units">
+                    <div class="label-inline">
+                        Units:
+                    </div>
+                    1-12
                 </div>
-                1-12
+                <h2 class="label-above">
+                    Description
+                </h2>
+                <p>
+                    <em>
+                        <strong>
+                            Prerequisite
+                        </strong>
+                        : Consent of chair of student's doctoral committee.
+                    </em>
+                    <br />
+                    Research and preparation of dissertation.
+                </p>
             </div>
-            <h2 class="label-above">
-                Description
-            </h2>
-            <p>
-                <em>
-                    <strong>
-                        Prerequisite
-                    </strong>
-                    : Consent of chair of student's doctoral committee.
-                </em>
-                <br />
-                Research and preparation of dissertation.
-            </p>
         </div>
-    </div>
 </body>
 
 </html>
